--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "homepage": "https://mboiar.github.io",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "5.0.0",
-    "@heroicons/react": "^2.0.17",
+    "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
